/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation(fileTree("libs"))
    //implementation files("lib/swing-layout");

    // This dependency is used by the application.
    implementation(libs.guava)
}

tasks.withType<Jar> {
    manifest {
        attributes["Main-Class"] = "main.App"
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

application {
    // Define the main class for the application.
    mainClass = "main.App"
}

tasks.withType<JavaExec> {
    enableAssertions = true
}